--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -15,7 +18,7 @@
     <!-- Шапка сайту -->
     <header>
       <nav>
-        <a href="./index.html" class="logo link" lang="en"><span class="logo-link">Web</span>Studio</a>
+        <a href="./index.html" class="logo link" lang="en"><span class="accent">Web</span>Studio</a>
 
         <ul class="site-nav list">
           <li><a href="./index.html" class="link current">Студія</a></li>
@@ -97,22 +100,42 @@
         <h2 class="section-title">Наша команда</h2>
         <ul class="team-list list">
           <li>
-            <img src="./images/team/team-card-one.jpg" alt="перший член команди" width="270" height="260" />
+            <img
+              src="./images/team/team-card-one.jpg"
+              alt="перший член команди"
+              width="270"
+              height="260"
+            />
             <h3 class="title">Ігор Дем'яненко</h3>
             <p class="text" lang="en">Product Designer</p>
           </li>
           <li>
-            <img src="./images/team/team-card-two.jpg" alt="другий член команди" width="270" height="260" />
+            <img
+              src="./images/team/team-card-two.jpg"
+              alt="другий член команди"
+              width="270"
+              height="260"
+            />
             <h3 class="title">Ольга Рєпіна</h3>
             <p class="text" lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/team/team-card-three.jpg" alt="третій член команди" width="270" height="260" />
+            <img
+              src="./images/team/team-card-three.jpg"
+              alt="третій член команди"
+              width="270"
+              height="260"
+            />
             <h3 class="title">Микола Тарасов</h3>
             <p class="text" lang="en">Marketing</p>
           </li>
           <li>
-            <img src="./images/team/team-card-four.jpg" alt="четвертий член команди" width="270" height="260" />
+            <img
+              src="./images/team/team-card-four.jpg"
+              alt="четвертий член команди"
+              width="270"
+              height="260"
+            />
             <h3 class="title">Михайло Єрмаков</h3>
             <p class="text" lang="en">UI Designer</p>
           </li>
@@ -120,20 +143,22 @@
       </section>
     </main>
 
-       <!-- Підвал -->
-       <footer class="page-footer">
-        <div>
-          <a href="./index.html" class="logo-footer link" lang="en"
-            ><span class="logo-link">Web</span>Studio</a>
-          <address>
-            <a href="https://goo.gl/maps/Ga38fahrQ6ZwUitU9" class="adress link">м. Київ, пр-т Лесі Українки, 26</a>
-          </address>
-  
-          <address>
-            <a href="mailto:info@devstudio.com" class="adress-item link">info@devstudio.com</a>
-            <br /><a href="tel:+380961111111" class="adress-item link">+38 096 111 11 11</a>
-          </address>
-        </div>
-      </footer>
+    <!-- Підвал -->
+    <footer class="page-footer">
+      <div>
+        <a href="./index.html" class="logo-footer link" lang="en"
+          ><span class="accent">Web</span>Studio</a>
+        <address>
+          <a href="https://goo.gl/maps/Ga38fahrQ6ZwUitU9" class="adress link">м. Київ, пр-т Лесі Українки, 26</a>
+          
+          <ul>
+            <li>
+              <a href="mailto:info@devstudio.com" class="adress-item link">info@devstudio.com</a>
+            </li>
+            <li><a href="tel:+380961111111" class="adress-item link">+38 096 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
+    </footer>
   </body>
 </html>
