--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <!-- Шапка сайту -->
     <header>
       <nav>
-        <a href="./index.html" class="logo link" lang="en"><span class="logo-link">Web</span>Studio</a>
+        <a href="./index.html" class="logo link" lang="en"><span class="accent">Web</span>Studio</a>
         <ul class="site-nav list">
           <li><a href="./index.html" class="link">Студія</a></li>
           <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
@@ -121,15 +121,18 @@
     <footer class="page-footer">
       <div>
         <a href="./index.html" class="logo-footer link" lang="en"
-          ><span class="logo-link">Web</span>Studio</a>
-        <address>
-          <a href="https://goo.gl/maps/Ga38fahrQ6ZwUitU9" class="adress link">м. Київ, пр-т Лесі Українки, 26</a>
-        </address>
-
-        <address>
-          <a href="mailto:info@devstudio.com" class="adress-item link">info@devstudio.com</a>
-          <br /><a href="tel:+380961111111" class="adress-item link">+38 096 111 11 11</a>
-        </address>
+          ><span class="accent">Web</span>Studio</a>
+          <address>
+            <a href="https://goo.gl/maps/Ga38fahrQ6ZwUitU9" class="adress link">м. Київ, пр-т Лесі Українки, 26</a>
+            
+            <ul>
+              <li>
+                <a href="mailto:info@devstudio.com" class="adress-item link">info@devstudio.com</a>
+              </li>
+              <li><a href="tel:+380961111111" class="adress-item link">+38 096 111 11 11</a></li>
+            </ul>
+          </address>
+        </div>
       </div>
     </footer>
   </body>
