button primary bc

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <address>
           <a href="https://goo.gl/maps/Ga38fahrQ6ZwUitU9" class="adress link">м. Київ, пр-т Лесі Українки, 26</a>
           
-          <ul>
+          <ul class="list">
             <li>
               <a href="mailto:info@devstudio.com" class="adress-item link">info@devstudio.com</a>
             </li>
