--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,8 @@
   </head>
 
   <body class="page">
-    <!-- Шапка сайту -->
+
+    <!-- Header -->
     <header>
       <nav>
         <a href="./index.html" class="logo link" lang="en"><span class="accent">Web</span>Studio</a>
@@ -32,9 +33,10 @@
       </ul>
     </header>
 
-    <!-- Основна частина -->
+    <!-- Main part -->
     <main>
-      <!-- Фільтр -->
+
+      <!-- Filtr -->
       <section>
         <h1 hidden>Портфоліо</h1>
         <ul class="list">
@@ -46,7 +48,7 @@
         </ul>
       </section>
       
-      <!-- Проекти -->
+      <!-- Projects -->
       <section class="projects">
         <ul class="projects-list list">
           <li>
@@ -117,7 +119,7 @@
       </section>
     </main>
 
-    <!-- Підвал -->
+    <!-- Footer -->
     <footer class="page-footer">
       <div>
         <a href="./index.html" class="logo-footer link" lang="en"
