--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body class="page">
-    <!-- Шапка сайту -->
+    <!-- Header -->
     <header>
       <nav>
         <a href="./index.html" class="logo link" lang="en"><span class="accent">Web</span>Studio</a>
@@ -33,7 +33,7 @@
       </ul>
     </header>
 
-    <!-- Основна частина -->
+    <!-- Mfin part -->
     <main>
       <!-- Герой -->
       <section class="hero">
@@ -41,7 +41,7 @@
         <button type="button" class="button primary">Замовити послугу</button>
       </section>
 
-      <!-- Особливості -->
+      <!-- Features -->
       <section class="section">
         <h2 hidden>Особливості</h2>
         <ul class="feature-list list">
@@ -64,7 +64,7 @@
         </ul>
       </section>
 
-      <!-- Чим ми займаємось -->
+      <!-- Work -->
       <section class="section">
         <h2 class="section-title">Чим ми займаємося</h2>
         <ul class="list">
@@ -95,7 +95,7 @@
         </ul>
       </section>
 
-      <!-- Наша команда -->
+      <!-- Our team -->
       <section class="section team">
         <h2 class="section-title">Наша команда</h2>
         <ul class="team-list list">
@@ -143,7 +143,7 @@
       </section>
     </main>
 
-    <!-- Підвал -->
+    <!-- Footer -->
     <footer class="page-footer">
       <div>
         <a href="./index.html" class="logo-footer link" lang="en"
