--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </ul>
     </header>
 
-    <!-- Mfin part -->
+    <!-- Main part -->
     <main>
       <!-- Герой -->
       <section class="hero">
