rename hero comments

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- Main part -->
     <main>
-      <!-- Герой -->
+      <!-- Hero -->
       <section class="hero">
         <h1 class="hero-title">Ефективні рішення для<br />вашого бізнесу</h1>
         <button type="button" class="button primary">Замовити послугу</button>
